--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/favicon.png"
     />
     <style>
       html,
@@ -34,7 +34,7 @@
       }
     </style>
 
-    <title>Frontend Mentor | Manage landing page</title>
+    <title>Aliyaser Mousavi | Manage landing page</title>
   </head>
   <body class="overflow-x-hidden z-50">
     <div class="overflow-x-hidden max-w-7xl mx-auto">
@@ -42,7 +42,7 @@
         <div class="md:block hidden">
           <div class="flex justify-between items-center">
             <div>
-              <img src="/src/images/logo.svg" alt="logo" />
+              <img src="./images/logo.svg" alt="logo" />
             </div>
             <div>
               <nav>
@@ -97,7 +97,7 @@
         <div class="md:hidden block">
           <div class="flex justify-between items-center">
             <div>
-              <img src="/src/images/logo.svg" alt="logo" />
+              <img src="./images/logo.svg" alt="logo" />
             </div>
             <div>
               <a
@@ -113,7 +113,7 @@
         class="absolute inset-0 -z-10 max-w-7xl mx-auto h-auto overflow-hidden"
       >
         <img
-          src="/src/images/bg-tablet-pattern.svg"
+          src="./images/bg-tablet-pattern.svg"
           alt="Background"
           class="w-[620px] sm:w-[480px] md:w-[620px] lg:w-[620px] h-auto absolute lg:-top-28 lg:-right-28 md:-top-32 md:-right-32 sm:-top-28 sm:-right-28 -top-16 -right-16"
         />
@@ -142,7 +142,7 @@
       </div>
       <div class="md:w-1/2">
         <img
-          src="/src/images/illustration-intro.svg"
+          src="./images/illustration-intro.svg"
           alt="illustration-intro"
           class="lg:w-[500px] md:w-[400px] w-[450px] lg:translate-x-24"
         />
@@ -154,7 +154,7 @@
       <div class="space-y-6">
         <div class="block md:hidden">
           <img
-            src="/src/images/bg-tablet-pattern.svg"
+            src="./images/bg-tablet-pattern.svg"
             alt="tablet-pattern"
             class="w-[620px] sm:w-[480px] md:w-[620px] lg:w-[620px] absolute -z-50 -top-44 -right-56"
           />
@@ -171,7 +171,7 @@
         </p>
         <div class="hidden md:block">
           <img
-            src="/src/images/bg-tablet-pattern.svg"
+            src="./images/bg-tablet-pattern.svg"
             alt="tablet-pattern"
             class="w-[620px] sm:w-[480px] md:w-[620px] lg:w-[620px] absolute -left-64 -z-50 -bottom-[340px]"
           />
@@ -269,7 +269,7 @@
               class="flex flex-col justify-center items-center px-2 py-8 space-y-3"
             >
               <img
-                src="/src/images/avatar-anisha.png"
+                src="./images/avatar-anisha.png"
                 alt="avatar-anisha"
                 class="size-14"
               />
@@ -286,7 +286,7 @@
               class="flex flex-col justify-center items-center px-2 py-8 space-y-3"
             >
               <img
-                src="/src/images/avatar-Bravo.png"
+                src="./images/avatar-Bravo.png"
                 alt="avatar-Bravo"
                 class="size-14"
               />
@@ -303,7 +303,7 @@
               class="flex flex-col justify-center items-center px-2 py-8 space-y-3"
             >
               <img
-                src="/src/images/avatar-richard.png"
+                src="./images/avatar-richard.png"
                 alt="avatar-richard"
                 class="size-14"
               />
@@ -322,7 +322,7 @@
               class="flex flex-col justify-center items-center px-2 py-8 space-y-3"
             >
               <img
-                src="/src/images/avatar-shanai.png"
+                src="./images/avatar-shanai.png"
                 alt="avatar-shanai"
                 class="size-14"
               />
@@ -355,7 +355,7 @@
               class="flex flex-col justify-center items-center px-2 py-8 space-y-3"
             >
               <img
-                src="/src/images/avatar-anisha.png"
+                src="./images/avatar-anisha.png"
                 alt="avatar-anisha"
                 class="size-14"
               />
@@ -372,7 +372,7 @@
               class="flex flex-col justify-center items-center px-2 py-8 space-y-3"
             >
               <img
-                src="/src/images/avatar-Bravo.png"
+                src="./images/avatar-Bravo.png"
                 alt="avatar-Bravo"
                 class="size-14"
               />
@@ -389,7 +389,7 @@
               class="flex flex-col justify-center items-center px-2 py-8 space-y-3"
             >
               <img
-                src="/src/images/avatar-richard.png"
+                src="./images/avatar-richard.png"
                 alt="avatar-richard"
                 class="size-14"
               />
@@ -408,7 +408,7 @@
               class="flex flex-col justify-center items-center px-2 py-8 space-y-3"
             >
               <img
-                src="/src/images/avatar-shanai.png"
+                src="./images/avatar-shanai.png"
                 alt="avatar-shanai"
                 class="size-14"
               />
@@ -450,11 +450,11 @@
       <div
         class="max-w-7xl mx-auto p-4 pt-10 pb-10 flex items-center justify-center space-y-6 md:space-y-0 md:flex-row flex-col"
       >
-        <div class="w-2/6 space-y-10">
+        <div class="sm:w-2/6 space-y-10 w-full">
           <div
             class="flex items-center justify-center md:items-start md:justify-start"
           >
-            <img src="/src/images/logo_text_white.svg" alt="logo" />
+            <img src="./images/logo_text_white.svg" alt="logo" />
           </div>
           <div
             class="flex gap-3 items-center justify-center md:items-start md:justify-start"
@@ -544,7 +544,7 @@
             </svg>
           </div>
         </div>
-        <div class="w-1/6">
+        <div class="sm:w-1/6 w-full">
           <nav>
             <ul
               class="flex flex-col gap-4 items-center justify-center md:items-start md:justify-start"
@@ -573,7 +573,7 @@
             </ul>
           </nav>
         </div>
-        <div class="w-1/6">
+        <div class="sm:w-1/6 w-full">
           <nav>
             <ul
               class="flex flex-col gap-4 items-center justify-center md:items-start md:justify-start"
@@ -602,7 +602,7 @@
             </ul>
           </nav>
         </div>
-        <div class="w-2/6">
+        <div class="sm:w-2/6 w-full">
           <div
             class="flex items-center justify-center md:items-start md:justify-start gap-3"
           >
